# PargonFiles

./: CMakeLists.txt  README.md
Include/Pargon/: Files.h
Include/Pargon/Files/: Directory.h  File.h
Source/Core/: Directory.cpp  File.cpp
Source/Win32/: Files.Win32.cpp
